No longer remove the old core directory eliminating potential OS file manager sync'ing issues causing component registration errors.  (nsbeta2+)[b=41376; r=dveditz]